# dl-kwt

./: .gitignore  README.md  ai-declaration.txt  pyproject.toml
.agents/skills/experiment-report-runner/: SKILL.md
.agents/skills/latex-writing/: SKILL.md
.agents/skills/ml-implementation-planner/: SKILL.md
.agents/skills/plan-execution-validation/: SKILL.md
configs/_shared/: common.yaml
configs/_shared/backbones/: bcresnet.yaml  kwt.yaml  matchboxnet.yaml
configs/experiments/stage1/: bcresnet_strategy_a.yaml  bcresnet_strategy_b.yaml  bcresnet_strategy_c.yaml  bcresnet_strategy_d.yaml  kwt_strategy_a.yaml  kwt_strategy_b.yaml  kwt_strategy_c.yaml  kwt_strategy_d.yaml  matchboxnet_strategy_a.yaml  matchboxnet_strategy_b.yaml  matchboxnet_strategy_c.yaml  matchboxnet_strategy_d.yaml
configs/experiments/stage2/: bcresnet_strategy_a_aug_010.yaml  kwt_strategy_a_aug_000.yaml  (+10 more)
configs/manifests/: stage1-rerun.txt  stage1.txt  stage2.txt  stage3.txt
docs/: project_plan.tex  report.tex
docs/report/: report.tex
docs/updated_report/: report.tex
outputs/benchmark/: bench.txt
outputs/summaries/: all_runs.csv
scripts/: aggregate_results.py  benchmark_model.py  build_stage2_manifest.py  build_stage3_manifest.py  prepare_dataset.py  profile_dataloader.py  run_manifest.py
src/speech_kws/: __init__.py  cli.py  config.py
tests/: conftest.py  test_audio_frontend_and_dataset.py  test_backbone_configs_and_pipeline.py  test_label_strategies.py  test_metrics_and_thresholds.py  test_model_io.py  test_prepare_dataset.py  test_reports.py  test_training_stability.py
(+481 files in other folders)
